planespotter/5_frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planespotter-frontend
  labels:
    app: planespotter-frontend
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: planespotter-frontend
  template:
    metadata:
      labels:
        app: planespotter-frontend
        tier: frontend
        service: planespotter
    spec:
      containers:
      - name: planespotter-fe
        image: yfauser/planespotter-frontend:b0a8b3186c3c18fd23632cf45ff7504b23e7c5b9
        imagePullPolicy: IfNotPresent
---

apiVersion: v1
kind: Service
metadata:
  name: planespotter-frontend
  labels:
    app: planespotter-frontend
spec:
  ports:
    # the port that this service should serve on
    - port: 80
  selector:
    app: planespotter-frontend

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: planespotter-frontend
spec:
  rules:
  - host: planespotter.syddsc.local
    http:
      paths:
      - backend:
          serviceName: planespotter-frontend
          servicePort: 80
