planespotter/10_network-policy_app_to_redis.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: planespotter-app-to-redis
spec:
  podSelector:
    matchLabels:
      app: redis-server
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: planespotter-app
      ports:
      - protocol: TCP
        port: 6379
