planespotter/11_network-policy_adsb_to_redis.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: planespotter-adsb-to-redis
spec:
  podSelector:
    matchLabels:
      app: redis-server
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: adsb-sync
      ports:
      - protocol: TCP
        port: 6379
