planespotter/12_network-policy_app_to_mysql.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: planespotter-app-to-mysql
  namespace: planespotter
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: planespotter-app
      ports:
      - protocol: TCP
        port: 3306
