planespotter/7_network-policy_denyall.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: planespotter
spec:
  podSelector: {}
  policyTypes:
  - Ingress
