planespotter/8_network-policy-ingress_to_fe.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: planespotter-ing-to-fe
  namespace: planespotter
spec:
  podSelector:
    matchLabels:
      app: planespotter-frontend
  policyTypes:
  - Ingress
  ingress:
    - from:
      - ipBlock:
          cidr: 100.64.208.1/32
      ports:
      - protocol: TCP
        port: 80
