planespotter/9_network-policy_fe_to_app.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: planespotter-fe-to-app
spec:
  podSelector:
    matchLabels:
      app: planespotter-app
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: planespotter-frontend
      ports:
      - protocol: TCP
        port: 80
